eslint_error_details.txt
The requested module 'minimatch' does not provide an export named 'default'
file:///E:/backup/pdf_pdf8/node_modules/@eslint/eslintrc/lib/config-array/override-tester.js:23
import minimatch from "minimatch";
       ^^^^^^^^^
SyntaxError: The requested module 'minimatch' does not provide an export named 'default'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:369:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:671:26)
    at async dynamicImportConfig (E:\backup\pdf_pdf8\node_modules\eslint\lib\config\config-loader.js:185:17)
    at async loadConfigFile (E:\backup\pdf_pdf8\node_modules\eslint\lib\config\config-loader.js:275:9)
    at async ConfigLoader.calculateConfigArray (E:\backup\pdf_pdf8\node_modules\eslint\lib\config\config-loader.js:588:23)
    at async #calculateConfigArray (E:\backup\pdf_pdf8\node_modules\eslint\lib\config\config-loader.js:369:19)
    at async entryFilter (E:\backup\pdf_pdf8\node_modules\eslint\lib\eslint\eslint-helpers.js:322:5)
    at async NodeHfs.<anonymous> (file:///E:/backup/pdf_pdf8/node_modules/@humanfs/core/src/hfs.js:574:24)
    at async NodeHfs.walk (file:///E:/backup/pdf_pdf8/node_modules/@humanfs/core/src/hfs.js:614:3)